# PyGame-project

./: .envrc  .gitignore  LICENSE  pyproject.toml  requirements.txt  Описание.docx  Техническое задание.docx
config/: config.json
docs/: Пояснительная записка.docx  преза_pygame.pptx  презентация_pygame.pptx
typario/: game.py  main.py
typario/components/: button.py
typario/core/: config.py
typario/data/: records.db
typario/data/languages/: english_10k.json  english_1k.json  russian.json  russian_10k.json  russian_1k.json
typario/functions/: classes.py  difficulty_window.py  launch_window.py  launch_window_2.py  utils.py
typario/lib/: spawner.py
typario/screens/: __init__.py  difficulty.py  game.py  game_over.py  menu.py
typario/utils/: image.py  records.py
typario/windows/: __init__.py  abc.py  difficulty.py  difficulty_window.py  enum.py  game.py  game_over.py  menu.py
